tests/lambda/arg-2.ast.err
Error: Unexpected token in input while parsing lambda, expected ), <identifier>
   ╭─[tests/lambda/arg-2.scm:1:12]
   │
 1 │ (lambda (x (y z))
   ·            ┬  
   ·            ╰── Unexpected token (
───╯
